--- a/ci/conda/recipes/morpheus/meta.yaml
+++ b/ci/conda/recipes/morpheus/meta.yaml
@@ -61,7 +61,7 @@ outputs:
         - cudf {{ rapids_version }}
         - cython >=0.29,<0.30
         - libcudf {{ rapids_version }}
-        - librdkafka 1.7
+        - librdkafka 1.9.2
         - mrc {{ minor_version }}
         - pip
         - pyarrow * *_cuda # Ensure we get a CUDA build. Version determined by cuDF
@@ -92,6 +92,7 @@ outputs:
         - pluggy 1.0.*
         - pyarrow * *_cuda # Ensure we get a CUDA build. Version determined by cuDF
         - python
+        - python-confluent-kafka 1.9.2
         - pytorch 2.0.1
         - pytorch-cuda
         - scikit-learn 1.2.2.*
