--- a/docker/conda/environments/cuda11.8_examples.yml
+++ b/docker/conda/environments/cuda11.8_examples.yml
@@ -24,7 +24,7 @@ channels:
     - nvidia
     - conda-forge
 dependencies:
-    - boto3=1.26.76
+    - boto3
     - chardet=5.0.0
     - cuml=23.06
     - dask>=2023.1.1
