--- a/models/training-tuning-scripts/fraud-detection-models/requirements.txt
+++ b/models/training-tuning-scripts/fraud-detection-models/requirements.txt
@@ -1,9 +1,10 @@
-dateparser==1.1.1
-matplotlib==3.7.1
-networkx==2.8.8
+click==8.1.3
+cuml==23.4.0
+dgl==1.0.2+cu118
 numpy==1.23.5
-pandas==1.3.5
-scikit_learn==1.1.2
-stellargraph==1.2.1
-tensorflow==2.12.0
-xgboost==1.6.2
+pandas==1.5.3
+scikit_learn==1.2.2
+torch==2.0.0+cu118
+torchmetrics==0.11.4
+tqdm==4.65.0
+xgboost==1.7.1
