--- a/models/validation-inference-scripts/fraud-detection-models/requirements.txt
+++ b/models/validation-inference-scripts/fraud-detection-models/requirements.txt
@@ -1,12 +1,10 @@
-cudf==0+untagged.1.gfc341af
-cuml==0+untagged.1.g835a9ae
-dateparser==1.1.0
-matplotlib==3.4.3
-networkx==2.6.3
-numpy==1.22.0
-pandas==1.3.3
-scikit_learn==1.0.2
-stellargraph==1.2.1
-tensorflow==2.8.0
-tensorflow_gpu==2.7.0
-xgboost==1.4.2
+click==8.1.3
+cuml==23.4.0
+dgl==1.0.2+cu118
+numpy==1.23.5
+pandas==1.5.3
+scikit_learn==1.2.2
+torch==2.0.0+cu118
+torchmetrics==0.11.4
+tqdm==4.65.0
+xgboost==1.7.1
