--- a/docker/conda/environments/cuda11.8_examples.yml
+++ b/docker/conda/environments/cuda11.8_examples.yml
@@ -24,7 +24,7 @@ channels:
     - nvidia
     - conda-forge
 dependencies:
-    - boto3=1.24.59
+    - boto3
     - chardet=5.0.0
     - cuml=23.06
     - dask>=2023.1.1
@@ -32,7 +32,7 @@ dependencies:
     - distributed>=2023.1.1
     - mlflow>=2.2.1,<3
     - papermill=2.3.4
-    - s3fs==2022.8.2
+    - s3fs>=2023.6
     - pip
     - wrapt=1.14.1 # ver 1.15 breaks the keras model used by the gnn_fraud_detection_pipeline
     - pip:
