--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -24,7 +24,7 @@ set(SPHINX_BUILD ${CMAKE_CURRENT_BINARY_DIR}/html)
 add_custom_target(${PROJECT_NAME}_docs ALL
     COMMAND
     BUILD_DIR=${CMAKE_CURRENT_BINARY_DIR}
-    MORPHEUS_IN_SPHINX_BUILD=1 ${SPHINX_EXECUTABLE} -W --keep-going -b html -j auto -T
+    MORPHEUS_IN_SPHINX_BUILD=1 ${SPHINX_EXECUTABLE} -W -b html -j auto -T
     ${SPHINX_SOURCE} ${SPHINX_BUILD}
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
     COMMENT "Generating documentation with Sphinx"
