--- a/examples/digital_fingerprinting/production/conda_env.yml
+++ b/examples/digital_fingerprinting/production/conda_env.yml
@@ -29,5 +29,7 @@ dependencies:
     - librdkafka
     - mlflow>=2.2.1,<3
     - nodejs=17.4.0
+    - nvtabular=23.06
     - papermill
+    - requests=2.26.0
     - s3fs>=2023.6
