--- a/examples/digital_fingerprinting/production/docker-compose.yml
+++ b/examples/digital_fingerprinting/production/docker-compose.yml
@@ -126,7 +126,7 @@ services:
       TERM: "${TERM:-}"
       DFP_CACHE_DIR: "/workspace/.cache/dfp"
       DFP_TRACKING_URI: "http://mlflow:5000"
-    command: ./launch.sh --train_users=generic --duration=1d
+    command: ./launch.sh --train_users=generic --duration=1d --start_time "2022-08-01" --input_file="../../../data/dfp/duo-training-data/*.json" --log_level INFO
     volumes:
       - ../../..:/workspace
     depends_on:
