--- a/docker/conda/environments/cuda11.8_dev.yml
+++ b/docker/conda/environments/cuda11.8_dev.yml
@@ -53,12 +53,12 @@ dependencies:
     - glog=0.6
     - gmock>=1.13.0
     - gputil
-    - grpc-cpp>=1.43
     - grpcio
     - gtest>=1.13.0
     - gxx_linux-64=11.2
     - include-what-you-use=0.18
     - isort
+    - libgrpc>=1.49
     - librdkafka=1.9.2
     - mlflow>=2.2.1,<3
     - mrc=23.07
