Updating dev dependencies to match runtime meta.yml

--- a/docker/conda/environments/cuda11.8_dev.yml
+++ b/docker/conda/environments/cuda11.8_dev.yml
@@ -89,9 +89,9 @@ dependencies:
     - scikit-learn=1.2.2
     - sphinx
     - sphinx_rtd_theme
-    - sqlalchemy<=1.9
+    - sqlalchemy<2.0 # 2.0 is incompatible with pandas=1.3
     - sysroot_linux-64=2.17
-    - tritonclient=2.26 #  Required by NvTabular, force the version, so we get protobufs compatible with 4.21
+    - tritonclient=2.26 # Required by NvTabular, force the version, so we get protobufs compatible with 4.21
     - tqdm=4
     - typing_utils=0.1
     - watchdog=2.1
