The SerializeStage was refactored and no longer represents the code snippet in docs/source/developer_guide/guides/3_simple_cpp_stage.md which also was no longer functional. Create a unittest which mimics the example so that we can ensure that the code in the docs will continue to function

--- a/morpheus/_lib/tests/CMakeLists.txt
+++ b/morpheus/_lib/tests/CMakeLists.txt
@@ -24,6 +24,7 @@ add_executable(test_libmorpheus
   io/test_data_loader_registry.cpp
   io/test_loaders.cpp
   messages/test_control_message.cpp
+  messages/test_dev_doc_ex3.cpp
   messages/test_sliced_message_meta.cpp
   modules/test_data_loader_module.cpp
   test_deserializers.cpp
@@ -59,9 +60,9 @@ set_target_properties(test_libmorpheus
 
 install(
     TARGETS
-      test_libmorpheus
+  test_libmorpheus
     RUNTIME DESTINATION
-      "${MORPHEUS_LIB_INSTALL_DIR}/tests"
+  "${MORPHEUS_LIB_INSTALL_DIR}/tests"
     COMPONENT Wheel
 )
 
