--- a/ci/conda/recipes/morpheus/meta.yaml
+++ b/ci/conda/recipes/morpheus/meta.yaml
@@ -21,7 +21,7 @@ package:
   version: {{ version }}
 
 source:
-  path: ../../../..
+  git_url: ../../../..
 
 outputs:
 
@@ -92,6 +92,7 @@ outputs:
         - pytorch 2.0.1
         - pytorch-cuda
         - scikit-learn 1.2.2.*
+        - sqlalchemy <=2.0 # 2.0 is incompatible with pandas=1.3
         - tqdm 4.*
         - tritonclient 2.26.*
         - typing_utils 0.1.*
