--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -268,6 +268,10 @@ COPY "${MORPHEUS_ROOT_HOST}/models" "./models"
 COPY "${MORPHEUS_ROOT_HOST}/scripts" "./scripts"
 COPY ["${MORPHEUS_ROOT_HOST}/*.md", "${MORPHEUS_ROOT_HOST}/LICENSE", "./"]
 
+# Update the symlinks in the models dir which are currently relative to the source repo to point to the installed
+# morpheus Python package
+RUN python ./docker/update_release_links.py
+
 # Use morpheus by default
 CMD [ "morpheus" ]
 
