--- a/docker/conda/environments/cuda11.8_examples.yml
+++ b/docker/conda/environments/cuda11.8_examples.yml
@@ -30,6 +30,7 @@ dependencies:
     - dask>=2023.1.1
     - dill=0.3.6
     - distributed>=2023.1.1
+    - python-fastjsonschema=2.17 # Transitive dep, work-around for issue #1100
     - mlflow>=2.2.1,<3
     - papermill=2.3.4
     - s3fs>=2023.6
