--- a/ci/conda/recipes/morpheus/meta.yaml
+++ b/ci/conda/recipes/morpheus/meta.yaml
@@ -60,6 +60,7 @@ outputs:
         - mrc {{ minor_version }}
         - pip
         - pyarrow * *_cuda # Ensure we get a CUDA build. Version determined by cuDF
+        - pybind11=2.10.4
         - pybind11-stubgen 0.10.5
         - python {{ python }}
         - rapidjson 1.1
