--- a/models/.gitattributes
+++ b/models/.gitattributes
@@ -6,3 +6,4 @@ log-parsing-models/* filter=lfs diff=lfs merge=lfs -text
 phishing-models/* filter=lfs diff=lfs merge=lfs -text
 root-cause-models/* filter=lfs diff=lfs merge=lfs -text
 sid-models/* filter=lfs diff=lfs merge=lfs -text
+fraud-detection-models/ filter=lfs diff=lfs merge=lfs -text
