--- a/pyproject.toml
+++ b/pyproject.toml
@@ -122,7 +122,13 @@ ignore-patterns = ["^\\.#"]
 
 # Python code to execute, usually for sys.path manipulation such as
 # pygtk.require().
-# init-hook =
+init-hook = """
+import sys
+from pylint.config import find_default_config_files
+
+config_file = next(find_default_config_files())
+sys.path.append(str((config_file / "../ci/pylint").resolve()))
+"""
 
 # Use multiple processes to speed up Pylint. Specifying 0 will auto-detect the
 # number of processors available to use, and will cap the count on Windows to
