pin pytorch-cuda to 11.8 Ensure we're installing the cuda-11.8 variant of dgl Update from pip style version spec to conda pytorch already in primary dev.yml

--- a/docker/conda/environments/cuda11.8_dev.yml
+++ b/docker/conda/environments/cuda11.8_dev.yml
@@ -83,7 +83,7 @@ dependencies:
     - python-graphviz
     - python=3.10
     - pytorch=2.0.1
-    - pytorch-cuda
+    - pytorch-cuda=11.8
     - rapidjson=1.1.0
     - scikit-build=0.17.1
     - scikit-learn=1.2.2
