--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -99,7 +99,10 @@
 
     "features": {
         "ghcr.io/devcontainers/features/docker-from-docker": {},
-        "ghcr.io/devcontainers/features/dotnet:1": {}
+        "ghcr.io/devcontainers/features/dotnet:1": {
+            "version": "6.0",
+            "installUsingApt": false
+        }
     },
 
     "customizations": {
@@ -116,7 +119,7 @@
 			],
             "settings": {
                 "cmake.cmakePath": "/tmp/.current-conda-env/bin/cmake",
-                "cmake.languageSupport.dotnetPath": "/usr/bin/dotnet",
+                // "cmake.languageSupport.dotnetPath": "/usr/bin/dotnet",
                 "C_Cpp.intelliSenseEngine": "disabled",
                 "python.terminal.activateEnvironment": false
             }
