--- a/docker/conda/environments/cuda11.8_dev.yml
+++ b/docker/conda/environments/cuda11.8_dev.yml
@@ -42,6 +42,7 @@ dependencies:
     - datacompy=0.8
     - dill
     - docker-py=5.0
+    - docutils
     - faker=12.3.0
     - flake8
     - flatbuffers=2.0
@@ -56,7 +57,10 @@ dependencies:
     - gtest>=1.13.0
     - gxx_linux-64=11.2
     - include-what-you-use=0.18
+    - ipywidgets
     - isort
+    - jupyter_core>=4.11.2,<5.0
+    - jupyterlab
     - libgrpc>=1.49
     - librdkafka=1.9.2
     - mlflow>=2.2.1,<3
@@ -82,8 +86,8 @@ dependencies:
     - python-confluent-kafka=1.9.2
     - python-graphviz
     - python=3.10
-    - pytorch=2.0.1
     - pytorch-cuda
+    - pytorch=2.0.1
     - rapidjson=1.1.0
     - scikit-build=0.17.1
     - scikit-learn=1.2.2
@@ -91,15 +95,9 @@ dependencies:
     - sphinx_rtd_theme
     - sqlalchemy<2.0 # 2.0 is incompatible with pandas=1.3
     - sysroot_linux-64=2.17
-    - tritonclient=2.26 # Required by NvTabular, force the version, so we get protobufs compatible with 4.21
     - tqdm=4
+    - tritonclient=2.26 # Required by NvTabular, force the version, so we get protobufs compatible with 4.21
     - typing_utils=0.1
     - watchdog=2.1
+    - websockets
     - yapf=0.40.1
-    ####### Morpheus Pip Dependencies (keep sorted!) #######
-    - pip:
-        # Add additional dev dependencies here
-        - docutils
-        - pytest-kafka==0.6.0
-        # Ensure all runtime requirements are installed using the requirements file
-        - --requirement requirements.txt
