--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,7 +91,7 @@ verbose = 2
 # A comma-separated list of package or module names from where C extensions may
 # be loaded. Extensions are loading into the active Python interpreter and may
 # run arbitrary code.
-extension-pkg-allow-list = ["mrc", "morpheus._lib", "morpheus._lib.stages"]
+extension-pkg-allow-list = ["mrc", "morpheus._lib", "morpheus._lib.messages", "morpheus._lib.stages"]
 
 # A comma-separated list of package or module names from where C extensions may
 # be loaded. Extensions are loading into the active Python interpreter and may
@@ -623,7 +623,9 @@ contextmanager-decorators = ["contextlib.contextmanager"]
 # List of members which are set dynamically and missed by pylint inference
 # system, and so shouldn't trigger E1101 when accessed. Python regular
 # expressions are accepted.
-# generated-members =
+
+# Add pytorch members to the list of dynamically set members. Only until pylint 3.0 supports pyi files
+generated-members = "torch.*"
 
 # Tells whether missing members accessed in mixin class should be ignored. A
 # class is considered mixin if its name matches the mixin-class-rgx option.
