--- a/.github/actions/install-devcontainers-cli/action.yml
+++ b/.github/actions/install-devcontainers-cli/action.yml
@@ -15,3 +15,4 @@ runs:
         sudo apt update;
         sudo apt install -y --no-install-recommends build-essential;
         npm install -g @devcontainers/cli;
+        npm install -g strip-json-comments-cli
