make devcontainer Dockerfile path absolute

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,7 +16,7 @@
 {
     "name": "Morpheus",
     "build": {
-        "dockerfile": "Dockerfile"
+        "dockerfile": "${localWorkspaceFolder}/.devcontainer/Dockerfile"
     },
 
     "hostRequirements": {
