--- a/docker/conda/environments/cuda11.8_dev.yml
+++ b/docker/conda/environments/cuda11.8_dev.yml
@@ -101,3 +101,7 @@ dependencies:
     - watchdog=2.1
     - websockets
     - yapf=0.40.1
+    ####### Morpheus Pip Dependencies (keep sorted!) #######
+    - pip:
+        # Add additional dev dependencies here
+        - pytest-kafka==0.6.0
