--- a/docker/conda/environments/cuda11.8_dev.yml
+++ b/docker/conda/environments/cuda11.8_dev.yml
@@ -89,6 +89,7 @@ dependencies:
     - pytorch-cuda
     - pytorch=2.0.1
     - rapidjson=1.1.0
+    - requests=2.31
     - scikit-build=0.17.1
     - scikit-learn=1.2.2
     - sphinx
