--- a/docker/conda/environments/cuda11.8_dev.yml
+++ b/docker/conda/environments/cuda11.8_dev.yml
@@ -44,6 +44,7 @@ dependencies:
     - docker-py=5.0
     - docutils
     - faker=12.3.0
+    - feedparser=6.0.10
     - flake8
     - flatbuffers=2.0
     - gcc_linux-64=11.2
