--- a/models/training-tuning-scripts/fraud-detection-models/requirements.yml
+++ b/models/training-tuning-scripts/fraud-detection-models/requirements.yml
@@ -17,7 +17,14 @@ channels:
     - rapidsai
     - nvidia
     - conda-forge
-    - dglteam/label/cu118
 dependencies:
+    - click==8.1.3
     - cuml=23.06
-    - dgl=1.0.2
+    - dgl==1.0.2+cu118
+    - numpy==1.23.5
+    - pandas==1.5.3
+    - scikit_learn==1.2.2
+    - torch==2.0.0+cu118
+    - torchmetrics==0.11.4
+    - tqdm==4.65.0
+    - xgboost==1.7.1
