--- a/docker/conda/environments/cuda11.8_dev.yml
+++ b/docker/conda/environments/cuda11.8_dev.yml
@@ -16,9 +16,10 @@
 name: morpheus
 channels:
     - rapidsai
+    - nvidia/label/cuda-11.8.0
     - nvidia
     - nvidia/label/dev # For pre-releases of MRC. Should still default to full releases if available
-    - nvidia/label/cuda-11.5.2 # For cuda-nvml-dev=11.5, which is not published under nvidia channel yet.
+    - pytorch
     - conda-forge
 dependencies:
     ####### Morpheus Dependencies (keep sorted!) #######
@@ -31,15 +32,17 @@ dependencies:
     - click >=8
     - cmake=3.24
     - configargparse=1.5
-    - cuda-nvml-dev=11.5
-    - cuda-python<=11.5.0 # Remove when Issue #251 is closed
-    - cudatoolkit=11.5
-    - cudf 22.08
-    - cupy=9.5.0
+    - cuda-compiler=11.8
+    - cuda-nvml-dev=11.8
+    - cuda-toolkit=11.8
+    - cudf=23.06
+    - cupy>=12.0.0
+    - cxx-compiler
     - cython=0.29.24
     - datacompy=0.8
-    - docker-compose=1.29.2
+    - dill
     - docker-py=5.0
+    - docutils
     - faker=12.3.0
     - flake8
     - flatbuffers=2.0
@@ -48,49 +51,59 @@ dependencies:
     - git-lfs=3.2
     - git>=2.35.3 # Needed for wildcards on safe.directory
     - glog=0.6
-    - gmock=1.10
+    - gmock>=1.13.0
     - gputil
-    - grpc-cpp>=1.43
     - grpcio
-    - gtest=1.10
+    - gtest>=1.13.0
     - gxx_linux-64=11.2
     - include-what-you-use=0.18
+    - ipywidgets
     - isort
-    - librdkafka=1.7.0
-    - mlflow>1.29,<2
-    - mrc=23.01
-    - myst-parser==0.17
-    - networkx=2.8
+    - jupyter_core>=4.11.2,<5.0
+    - jupyterlab
+    - libgrpc>=1.49
+    - librdkafka=1.9.2
+    - mlflow>=2.2.1,<3
+    - mrc=23.11
+    - networkx=3.1
     - ninja=1.10
-    - nodejs=17.4.0
-    - numba==0.55
+    - nodejs=18.15.0
+    - numba>=0.56.2
     - numpydoc=1.4
-    - nvcc_linux-64=11.5
+    - nvtabular=23.06
     - pandas=1.3
     - pip
     - pkg-config # for mrc cmake
     - pluggy=1.0
-    - protobuf=3.20
+    - protobuf=4.21.*
+    - pyarrow * *_cuda # Ensure we get a CUDA build. Version determined by cuDF
     - pybind11-stubgen=0.10.5
     - pydot
+    - pylint>=2.17.4,<2.18 # 2.17.4 contains a fix for toml support
     - pytest
     - pytest-benchmark>=4.0
     - pytest-cov
-    - python-confluent-kafka=1.7.0
+    - python-confluent-kafka=1.9.2
     - python-graphviz
-    - python=3.8
+    - python=3.10
+    - pytorch-cuda
+    - pytorch=2.0.1
     - rapidjson=1.1.0
-    - scikit-build=0.13
+    - requests=2.31
+    - scikit-build=0.17.1
+    - scikit-learn=1.2.2
     - sphinx
     - sphinx_rtd_theme
+    - sqlalchemy<2.0 # 2.0 is incompatible with pandas=1.3
     - sysroot_linux-64=2.17
     - tqdm=4
+    - tritonclient=2.26 # Required by NvTabular, force the version, so we get protobufs compatible with 4.21
     - typing_utils=0.1
     - watchdog=2.1
-    - yapf=0.32.0
+    - websockets
+    - yapf=0.40.1
+    - databricks-connect
     ####### Morpheus Pip Dependencies (keep sorted!) #######
     - pip:
         # Add additional dev dependencies here
-        - docutils
-        # Ensure all runtime requirements are installed using the requirements file
-        - --requirement requirements.txt
+        - pytest-kafka==0.6.0
