--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -74,62 +74,10 @@ dependencies:
           - pip:
               - pytest-kafka==0.6.0
 
-  # build_python:
-  #   common:
-  #     - output_types: [conda, requirements, pyproject]
-  #       packages:
-  #         - cython>=3.0.0
-  #         - scikit-build>=0.13.1
-  #         - setuptools
-  #     - output_types: conda
-  #       packages: &build_python_packages_conda
-  #         - &cudf_conda cudf==23.10.*
-  #         - &rmm_conda rmm==23.10.*
-  #     - output_types: requirements
-  #       packages:
-  #         # pip recognizes the index as a global option for the requirements.txt file
-  #         # This index is needed for cudf and rmm.
-  #         - --extra-index-url=https://pypi.nvidia.com
-  #   specific:
-  #     - output_types: conda
-  #       matrices:
-  #         - matrix:
-  #             arch: x86_64
-  #           packages:
-  #             - *gcc_amd64
-  #             - *sysroot_amd64
-  #         - matrix:
-  #             arch: aarch64
-  #           packages:
-  #             - *gcc_aarch64
-  #             - *sysroot_aarch64
-  #     - output_types: [requirements, pyproject]
-  #       matrices:
-  #         - matrix: {cuda: "12.0"}
-  #           packages:
-  #             - cudf-cu12==23.10.*
-  #             - rmm-cu12==23.10.*
-  #         - matrix: {cuda: "11.8"}
-  #           packages: &build_python_packages_cu11
-  #             - &cudf_cu11 cudf-cu11==23.10.*
-  #             - &rmm_cu11 rmm-cu11==23.10.*
-  #         - {matrix: {cuda: "11.5"}, packages: *build_python_packages_cu11}
-  #         - {matrix: {cuda: "11.4"}, packages: *build_python_packages_cu11}
-  #         - {matrix: {cuda: "11.2"}, packages: *build_python_packages_cu11}
-  #         - {matrix: null, packages: [*cudf_conda, *rmm_conda] }
   cudatoolkit:
     specific:
-      - output_types: conda
+      - output_types: [conda]
         matrices:
-          - matrix:
-              cuda: "12.2"
-            packages:
-              - cuda-cudart-dev
-              - cuda-cudart-static
-              - cuda-nvrtc-dev
-              - cuda-version=12.2
-              - cuda-nvml-dev
-              - cuda-tools
           - matrix:
               cuda: "11.8"
             packages:
