--- a/.github/workflows/project_automation_set_in_progress.yml
+++ b/.github/workflows/project_automation_set_in_progress.yml
@@ -13,7 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: Set PR and Linked Issues to In Progress
+name: Project - Set PR and Linked Issues to In Progress
 
 on:
   pull_request_target:
