--- a/.github/workflows/project_automation_sync_pr_issues.yml
+++ b/.github/workflows/project_automation_sync_pr_issues.yml
@@ -13,7 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: Synchronize Linked Issues
+name: Project - Synchronize Linked Issues
 
 on:
   pull_request_target:
