--- a/.github/workflows/project_automation_track_pr_dates.yml
+++ b/.github/workflows/project_automation_track_pr_dates.yml
@@ -13,7 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: Set Dates
+name: Project - Set PR Dates
 
 on:
   pull_request_target:
