--- a/docker/conda/environments/cuda11.8_dev.yml
+++ b/docker/conda/environments/cuda11.8_dev.yml
@@ -108,3 +108,4 @@ dependencies:
     - pip:
         # Add additional dev dependencies here
         - pytest-kafka==0.6.0
+        - pymilvus==2.3.1
