--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,14 @@ ignore_patterns = [
 implicit_optional = true
 
 [tool.pyright]
+# Only warn about using an Optional[T] as if it were T
+reportOptionalCall = "warning"
+reportOptionalContextManager = "warning"
+reportOptionalIterable = "warning"
+reportOptionalMemberAccess = "warning"
+reportOptionalOperand = "warning"
+reportOptionalSubscript = "warning"
+
 # Allow None for argument default values
 strictParameterNoneValue = false
 
