use conda env yaml's for training-tuning-scripts

--- a/models/training-tuning-scripts/abp-models/requirements.yml
+++ b/models/training-tuning-scripts/abp-models/requirements.yml
@@ -16,18 +16,10 @@
 channels:
     - rapidsai
     - nvidia
-    - dglteam/label/cu118
-    - pytorch
     - conda-forge
 dependencies:
-    - click>=8
     - cuml=23.06
-    - dgl
     - jupyterlab
-    - matplotlib
-    - pytorch-cuda=11.8
-    - pytorch=2.0.1
+    - python=3.10
     - scikit-learn=1.2.2
-    - tqdm=4
-    - torchmetrics
     - xgboost
