--- a/models/training-tuning-scripts/ransomware-models/requirements.yml
+++ b/models/training-tuning-scripts/ransomware-models/requirements.yml
@@ -14,20 +14,11 @@
 # limitations under the License.
 
 channels:
-    - rapidsai
-    - nvidia
-    - dglteam/label/cu118
-    - pytorch
     - conda-forge
 dependencies:
-    - click>=8
-    - cuml=23.06
-    - dgl
     - jupyterlab
     - matplotlib
-    - pytorch-cuda=11.8
-    - pytorch=2.0.1
+    - pandas=1.3
+    - python=3.10
     - scikit-learn=1.2.2
-    - tqdm=4
-    - torchmetrics
-    - xgboost
+    - seaborn
